@@ -1,3 +1,7 @@
+2003-11-13  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-b6
+
+	* Ignore config_version when running backup script.
+
 2003-11-12  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-b5
 
 	* Modified backup_albums.php to prevent a catch-22 situation.  You 
